--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,37 +2,69 @@
   display: flex;
   background-color: transparent;
   background: none;
-  position: fixed;
   width: 100vw;
+  max-width: 100%;
   top: 0;
-  margin: 15px;
-  margin-top: 15px;
+  padding: 15px;
+  padding-top: 15px;
   z-index: 100;
+  justify-content: center;
+
+  position: fixed;
 }
 
 .header__logo {
   height: 24px;
   width: 100px;
-  margin-top: 7px;
+  padding-top: 7px;
 }
 
 .header__center {
-  flex: 1;
+  flex: 0.8;
   display: flex;
   justify-content: center;
 }
 
 .header__center > p {
-  margin: 10px;
+  padding: 10px;
   text-transform: uppercase;
 }
 
 .header__right {
   display: flex;
-  justify-content: flex-end;
   text-transform: uppercase;
 }
 
 .header__right > p {
-  margin: 10px;
+  padding: 10px;
+}
+
+@media (max-width: 1079px) {
+  .header__right {
+    display: none;
+  }
+
+  .header__center {
+    padding-top: 7px;
+    align-items: flex-end;
+  }
+
+  .header__center > p {
+    padding: 4px;
+    text-align: center;
+  }
+}
+
+@media (max-width: 1079px) {
+  .header__center > p {
+    padding: 0.5rem;
+    font-size: 0.8rem;
+  }
+
+  .header__logo {
+    margin-right: 3rem;
+    height: 0.5rem;
+    width: 40px;
+    padding: 8px;
+  }
 }
