--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -17,13 +17,14 @@
 }
 
 .item__text {
-  margin-top: 20%;
+  margin-top: 33%;
   display: flex;
   flex-direction: column;
-  font-size: 32px;
+  font-size: 40px;
   color: #393c41;
   align-items: center;
   flex: 1;
+  width: 100vw;
   text-align: center;
 }
 
@@ -46,5 +47,6 @@
   color: white;
   width: 100%;
   margin-top: 3%;
+  display: flex;
   justify-content: center;
 }
